--- a/.github/workflows/gha.yml
+++ b/.github/workflows/gha.yml
@@ -27,7 +27,7 @@ jobs:
       - 
         name: Kustomize
         run: |
-          cd demoproj/env/stage
+          cd nginx/env/stage
           kustomize edit set image ${{ env.version }}
           git config --global user.name "Commit Bot"
           git config --global user.email "no-reply@akuity.io"
