--- a/.github/workflows/gha.yml
+++ b/.github/workflows/gha.yml
@@ -28,7 +28,7 @@ jobs:
         name: Kustomize
         run: |
           cd nginx/env/stage
-          kustomize edit set image ${{ env.version }}
+          kustomize edit set image library/nginx:${{ env.version }}
           git config --global user.name "Commit Bot"
           git config --global user.email "no-reply@akuity.io"
           git add .
