--- a/.github/workflows/gha.yml
+++ b/.github/workflows/gha.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           cd nginx/env/stage
           kustomize edit set image library/nginx:${{ env.version }}
-          kustomize edit set nameprefix ${{ GITHUB_ACTOR }}-
+          kustomize edit set nameprefix ${GITHUB_ACTOR}-
           git config --global user.name "Commit Bot"
           git config --global user.email "no-reply@akuity.io"
           git add .
